[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelGUI/LevelGUI.gd" type="Script" id=1]

[node name="LevelGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -241.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnLabel" type="Label" parent="VBoxContainer"]
margin_right = 241.0
margin_bottom = 14.0
text = "Turn: "

[node name="ActionLabel" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 241.0
margin_bottom = 32.0
text = "Action: "

[node name="AirLabel" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 241.0
margin_bottom = 50.0
text = "Action: "

[node name="WaterLabel" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 241.0
margin_bottom = 68.0
text = "Action: "

[node name="SoilLabel" type="Label" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 241.0
margin_bottom = 86.0
text = "Action: "

[node name="Tiles" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 241.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_vertical = 3
