[gd_scene load_steps=16 format=2]

[ext_resource path="res://Art/afternoony.png" type="Texture" id=1]
[ext_resource path="res://Art/Sprout Lands - Sprites - premium pack/objects/Piknik blanket.png" type="Texture" id=2]
[ext_resource path="res://Art/Sprout Lands - Sprites - premium pack/objects/Piknik basket.png" type="Texture" id=3]
[ext_resource path="res://Art/bart.png" type="Texture" id=4]
[ext_resource path="res://Fonts/ColorTube-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/coin.png" type="Texture" id=6]
[ext_resource path="res://Themes/buttonUITheme.tres" type="Theme" id=7]
[ext_resource path="res://UI/HealthBarsObject.tscn" type="PackedScene" id=8]
[ext_resource path="res://LevelGUI/LevelGUI.gd" type="Script" id=9]
[ext_resource path="res://Art/sunny.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.74902, 0.780392, 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=3]
antialiased = false
font_path = "res://Fonts/MontserratAlternates-SemiBold.otf"

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 32
font_data = ExtResource( 5 )
fallback/0 = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[node name="LevelUI" type="Control"]
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.854902, 0.768627, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 930.149, 529.161 )
scale = Vector2( 2.3743, 1.59491 )
texture = ExtResource( 2 )

[node name="PiknikBasket" type="Sprite" parent="Sprite"]
position = Vector2( -0.834808, 0.388336 )
scale = Vector2( 1.28261, 1.70388 )
texture = ExtResource( 3 )

[node name="Bart" type="Sprite" parent="."]
position = Vector2( 715, 535 )
scale = Vector2( 6, 4 )
z_index = -1
texture = ExtResource( 4 )

[node name="Bart3" type="Sprite" parent="."]
position = Vector2( 147.5, 535 )
scale = Vector2( 7, 4 )
z_index = -1
texture = ExtResource( 4 )

[node name="Bart2" type="Sprite" parent="."]
position = Vector2( 442.488, 535 )
scale = Vector2( 8.07448, 4 )
z_index = -1
texture = ExtResource( 4 )

[node name="HealthBarsObject" parent="." instance=ExtResource( 8 )]
margin_left = 609.556
margin_top = 486.557
margin_right = 1034.56
margin_bottom = 607.557
rect_scale = Vector2( 0.5, 0.8 )

[node name="DaylightIndicator" type="Panel" parent="."]
margin_left = 699.616
margin_top = 8.29591
margin_right = 748.616
margin_bottom = 54.2959
theme = ExtResource( 7 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="1" type="TextureRect" parent="DaylightIndicator"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureRect" parent="DaylightIndicator"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
stretch_mode = 6

[node name="MoneyLabel" type="Label" parent="."]
margin_left = 380.905
margin_top = 524.171
margin_right = 460.905
margin_bottom = 557.171
custom_fonts/font = SubResource( 2 )
text = "$$$$"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 41.6739
margin_top = 10.0
margin_right = 445.674
margin_bottom = 62.0
custom_fonts/font = SubResource( 4 )
text = "AGROECOLOGY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="Sprite" parent="."]
position = Vector2( 333.632, 536.061 )
scale = Vector2( 1.93135, 1.59501 )
texture = ExtResource( 6 )

[node name="TurnLabel" type="Label" parent="."]
margin_left = 789.017
margin_top = 20.0476
margin_right = 931.017
margin_bottom = 47.0476
custom_fonts/font = SubResource( 5 )
text = "Turn 1 of 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiles" type="GridContainer" parent="."]
margin_left = 9.0
margin_top = 481.0
margin_right = 272.0
margin_bottom = 592.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}
